Getting closer to interface happiness.

--- a/ClientApp/scss/lcar.scss
+++ b/ClientApp/scss/lcar.scss
@@ -10,8 +10,14 @@ $gray-800: #343a40;
 $gray-900: #212529;
 $black: #000;
 
-$primary: #9999CC;
-$secondary: #9999CC;
+$primary: #ff9900;
+$secondary: #cc99cc;
+$success: #9999cc;
+$info: #cc6666;
+$warning: #ff9966;
+$danger: #cc6699;
+$light: $gray-100;
+$dark: #000;
 
 $body-bg: $black;
 $body-color: $white;
