--- a/Views/Default/Index.cshtml
+++ b/Views/Default/Index.cshtml
@@ -16,5 +16,5 @@
         </div>
     }
 </div>
-<script type="text/javascript" src="/dist/vendor.js"></script><script type="text/javascript" src="/dist/main.js"></script></body>
+<script type="text/javascript" src="/dist/js/vendor.js"></script><script type="text/javascript" src="/dist/js/main.js"></script></body>
 </html>
