Major portion of database structure complete.

--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -1,7 +1,13 @@
-﻿@model LCARS.Models.GameOverview
-@{
-    ViewData["Title"] = "Index";
-}
+﻿<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-<h2>Index</h2>
+    <title>Library Computer Access/Retrieval System</title>
+</head>
+<body>
 
+
+</body>
+</html>
